# msf-aux-auditor

./: .gitignore  AI_FEATURES.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  WARP.md  aux_modules.sample.json  pyproject.toml  requirements.txt  setup.py
src/msf_aux_auditor/: __init__.py  ai_analyzer.py  ai_module_selector.py  cli.py  config.py  msf_client.py  msf_runner.py  reporter.py
